--- a/css/freight-forwarding-automation.css
+++ b/css/freight-forwarding-automation.css
@@ -184,19 +184,22 @@ body{
 /* 
 Freight 2nd scetion image*/
 
-.center-container-freightimg {
+
+  
+.center-container-freightimg img{
+    max-width: 100%;
+    max-height: 100%;
+    border-radius:20px;
+    object-fit: contain;
+    background-color: black;
+  }
+  .center-container-freightimg {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-  }
-  
-  .center-image-freight{
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-  }
-
+    background-color: black;
+}
 /* 3rd fright solution */
 .solution-freight
 {
