--- a/css/bautomate-main.css
+++ b/css/bautomate-main.css
@@ -913,7 +913,7 @@ body {
    .accreditation-partner {
     text-align: center;
     padding: 10px 20px;
-    background: linear-gradient(135deg, #ffffff 40%, #e6f4f8 100%);
+    background-color:white;
 }
 
 .accreditation-partner h2 {
