--- a/css/product-item.css
+++ b/css/product-item.css
@@ -30,7 +30,7 @@
 
   .about-section-oee{
     background-color: #121212;
-    margin-top: -3%;
+    padding-top: 3%;
   }
   
   .tab-title-oee:hover {
