--- a/css/changes.css
+++ b/css/changes.css
@@ -952,6 +952,8 @@
 
 .subheading-pricing {
   font-size: 1.5rem;
+  width: 80%;
+  margin: 0 auto;
 }
 
 /* Responsive Styling */
@@ -961,6 +963,7 @@
   }
   .subheading-pricing {
     font-size: 1.2rem;
+    width: 100%;
   }
 }
 
