--- a/css/development-services.css
+++ b/css/development-services.css
@@ -729,3 +729,131 @@ color: #FF6F20;
  width:100%;
  background-color: white;
 }
+
+/* Datascience */
+.image-dataanalyticsprocess {
+  background-color: #141414;
+  width: 100%;
+  display: block; 
+  padding: 0; 
+}
+.dataanaytics-title-process
+{
+  line-height: 26px;
+}
+.image-iosprocess {
+  width: 100%; /* Ensures the image stretches to full width of the container */
+  height: auto; 
+  padding-left:10px;
+  padding-right:10px;
+}
+.datascience-logo {
+  background-color: #141414 !important;
+}
+.datascience-offerings h2
+{
+  margin-top:30px;
+  padding-top:20px;
+  padding-bottom: 10px;
+  letter-spacing: 0px;
+}
+.dataanalytics-choose-title {
+  font-size: 40px;
+  line-height: 30px;
+  padding-bottom: 10px;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(45deg, #edb106, #b20d0c);
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+
+@media (max-width: 1200px) {
+  .dataanalytics-choose-title {
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 992px) {
+  .dataanalytics-choose-title {
+    font-size: 32px; 
+  }
+}
+
+@media (max-width: 768px) {
+  .dataanalytics-choose-title {
+    font-size: 30px; 
+  }
+}
+
+@media (max-width: 576px) {
+  .dataanalytics-choose-title {
+    font-size: 26px; 
+  }
+}
+
+@media (max-width: 360px) {
+  .dataanalytics-choose-title {
+    font-size: 24px; 
+  }
+}
+
+.dataanalytics-card-title h4
+{
+  -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(45deg, #edb106, #b20d0c);
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+
+.dataanalytics-logotitle
+{
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(45deg, #edb106, #b20d0c);
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+.data-analytics-diagram
+{
+  background-color: transparent;
+}
+
+/* Apply styles to the parent container */
+.datascience-process {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  padding: 10px;
+  height: auto;
+  width: 100%;
+  max-width: 850px;
+  margin: 0 auto;
+  border-radius: 20px;
+}
+
+.datascience-process img {
+  width: 800px;
+  max-width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 8px;
+}
+
+@media (max-width: 768px) {
+  .datascience-process {
+    height: auto;
+    width: 80%;
+    padding: 10px;
+  }
+
+  
+}
+
+@media (max-width: 480px) {
+  .datascience-process {
+    height: auto;
+    width: 90%;
+    padding: 5px;
+  }
+
+}
