--- a/css/blog-old.css
+++ b/css/blog-old.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
     --theme-orange-color: #ef4f4f;
@@ -8,10 +6,10 @@
 section.main-blog-page {
     padding: 8rem 0;
 }
-
+/*
 .blogpage {
     font-family: "Poppins";
-}
+}*/
 
 section.main-blog-page.page-title {
     background-size: 100%;
@@ -33,7 +31,6 @@ section.main-blog-page.page-title::before {
 /* data-bg-img="../images/bg/blog-banner.jpg" */
 
 section.main-blog-page h1 {
-    font-family: "Outfit";
     letter-spacing: .25rem;
     color: white;
     font-weight: 700;
@@ -44,7 +41,6 @@ section.main-blog-page h1 {
 
 
 section.main-blog-page nav {
-    font-family: "Inter";
     color: white;
     font-weight: 800;
 }
@@ -59,7 +55,6 @@ section.blogpage p {
 }
 
 section.blogpage div.container * {
-    font-family: "Inter" !important;
     font-weight: 800 !important;
 }
 
