--- a/css/changes.css
+++ b/css/changes.css
@@ -306,6 +306,14 @@
   @media(max-width:500px){
     .container-counter{
       flex-wrap: wrap;
+      padding-top: 5%;
+    }
+    .counter-timer-counter{
+      font-size: 35px;
+    }
+    .counter-title-counter{
+      font-size: 16px;
+      line-height: 20px;
     }
   }
  
@@ -611,7 +619,7 @@
       width: 100%;
     }
     .grid-img-grid{
-      width: 100%;
+      width: 100% ;
     }
   }
  
