--- a/css/offshore.css
+++ b/css/offshore.css
@@ -430,6 +430,9 @@
   .why-choose-text-offshore h3{
     font-size: 20px;
   }
+  .section-title-offshore{
+    font-size: 25px;
+  }
 }
 
 /* Responsive Styles */
