--- a/css/devService.css
+++ b/css/devService.css
@@ -531,4 +531,10 @@
     height: auto;
   }
 }
+.container-wpl{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3%;
+}
 
