--- a/css/enquiry.css
+++ b/css/enquiry.css
@@ -344,34 +344,35 @@ body{
 }
 
 @media (max-width: 480px) {
-    .automation-section
-    {
-       padding-top:5px !important;
-       padding-bottom: 5px !important;
-    }
-    .how-it-works-title {
-        font-size: 1.5rem;
-    }
+  .automation-section
+  {
+     padding-top:5px !important;
+     padding-bottom: 5px !important;
+  }
+  .how-it-works-title {
+      font-size: 1.5rem;
+      margin-bottom: 40px;
+  }
 
-    .step-title {
-        font-size: 1.2rem;
-        text-align: left;
-    }
+  .step-title {
+      font-size: 1.2rem;
+      text-align: left;
+  }
 
-    .step-content-title {
-        font-size: 1.3rem;
-        text-align: left;
-    }
+  .step-content-title {
+      font-size: 1.3rem;
+      text-align: left;
+  }
 
-    .step-content-description {
-        font-size: 0.9rem;
-        line-height: 1.5;
-        text-align: left;
-    }
+  .step-content-description {
+      font-size: 0.9rem;
+      line-height: 1.5;
+      text-align: left;
+  }
 
-    .how-it-works-container {
-        gap: 10px;
-    }
+  .how-it-works-container {
+      gap: 10px;
+  }
 }
   
 
