--- a/css/shortcodes.css
+++ b/css/shortcodes.css
@@ -437,3 +437,11 @@ a.white-btn:focus, .white-btn:focus { background-image: linear-gradient(135deg, 
     margin-bottom: 4%;
   }
 }
+
+.portfolio-item.style-3 .portfolio-desc .portfolio-cat span {
+  color: var(--theme-primary-color)
+}
+.testimonials-innomiant
+{
+  margin-top:80px;
+}
