--- a/css/blogs.css
+++ b/css/blogs.css
@@ -162,3 +162,9 @@
   opacity: .7;
   mask-image: linear-gradient(to right, transparent, white, white, transparent);
 }
+
+
+
+.primary-footer {
+  padding-top: 3rem;
+}
