--- a/css/ivr-automation.css
+++ b/css/ivr-automation.css
@@ -81,7 +81,7 @@
     }
 
     .banner-business-responsive-image {
-        transform: scale(1.3) translateX(1.3rem);
+        transform: scale(1.5) translateX(.6rem);
     }
 
     .whyIVR {
