--- a/css/base.css
+++ b/css/base.css
@@ -223,7 +223,7 @@ a, i, .btn, button, img, span, ul, li, a:before, .dropdown-menu, .feature-icon, 
 .footer-widget{margin-bottom: 0;}
 .footer-widget.widget ul { margin-left: 0; padding-left: 0; margin-bottom: 0; }
 .footer-widget.widget ul li { list-style-type: none; margin-bottom: 15px; }
-.primary-footer { background: var(--theme-bg-dark2-color); position: relative; z-index: 99; color: var(--theme-white-color); }
+.primary-footer { margin-top: 0 !important;background: var(--theme-bg-dark2-color); position: relative; z-index: 99; color: var(--theme-white-color); }
 .secondary-footer{background: var(--theme-bg-dark-color); border-top: 1px solid var(--theme-border-light-color); padding: 30px 0; font-size: 16px; color: var(--theme-white-color);}
 .footer h5{ position: relative; color: var(--theme-white-color);}
 .media-icon.list-inline li { display: inline-block; }
