--- a/css/robotic-documented.css
+++ b/css/robotic-documented.css
@@ -112,9 +112,9 @@ body{
   
   /* Image section styling */
   .banner-business-image {
-      flex: 1 1 45%; /* Allow the image to adjust width on smaller screens */
+      flex: 1 1 45%; 
       position: relative;
-      z-index: 1; /* Ensure image is above the dimmed background */
+      z-index: 1; 
   }
   
   /* Responsive image */
@@ -1275,3 +1275,18 @@ background-clip: text;
 {
     margin-top: 10px;
 }
+
+/* Benefit-documenetd-mobile */
+@media (max-width: 430px) {
+    .benefits-documentrobotic h6 {
+      text-align: center !important; /* Ensure styles are applied */
+    }
+  }
+  
+
+.owl-carousel .owl-dots
+{
+    left:45%;
+}
+
+  
